--- a/src/MannsBlog/Resources/Views/Shared/_Menu.de-DE.resx
+++ b/src/MannsBlog/Resources/Views/Shared/_Menu.de-DE.resx
@@ -120,6 +120,9 @@
   <data name="About" xml:space="preserve">
     <value>Über mich</value>
   </data>
+  <data name="Contact" xml:space="preserve">
+    <value>Kontakt</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Start</value>
   </data>
