Moved Contact to Root Controller, updated ContactFormModel, Updated Resources, Updated MailServices, so they supporting Attachments, Smaller other fixes.

--- a/src/MannsBlog/Resources/Views/Shared/_Sidebar.de-DE.resx
+++ b/src/MannsBlog/Resources/Views/Shared/_Sidebar.de-DE.resx
@@ -126,6 +126,9 @@
   <data name="Search" xml:space="preserve">
     <value>Suchbegriff...</value>
   </data>
+  <data name="Stardate" xml:space="preserve">
+    <value>Sternzeit</value>
+  </data>
   <data name="Visitors" xml:space="preserve">
     <value>Besucher</value>
   </data>
