--- a/src/MannsBlog/Resources/Views/Root/CurriculumVitae.de-DE.resx
+++ b/src/MannsBlog/Resources/Views/Root/CurriculumVitae.de-DE.resx
@@ -204,4 +204,13 @@
   <data name="write-me" xml:space="preserve">
     <value>Schreiben Sie mir</value>
   </data>
+  <data name="viewbag-pageblurp" xml:space="preserve">
+    <value>Meine beruflichen Erfahrungen</value>
+  </data>
+  <data name="viewbag-pagename" xml:space="preserve">
+    <value>Lebenslauf &amp; Erfahrungen</value>
+  </data>
+  <data name="viewbag-title" xml:space="preserve">
+    <value>Curriculum Vitae - Sascha Manns's Twilight Zone</value>
+  </data>
 </root>
