--- a/src/MannsBlog/Resources/Views/Root/Testimonials.de-DE.resx
+++ b/src/MannsBlog/Resources/Views/Root/Testimonials.de-DE.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="tests" xml:space="preserve">
+    <value>Diese Empfehlungen stammen von ehemaligen Kollegen, der letzten Jahre.</value>
+  </data>
   <data name="viewbag-pageblurp" xml:space="preserve">
     <value>Was andere sagen...</value>
   </data>
