--- a/src/MannsBlog/Resources/Views/Root/CurriculumVitae.de-DE.resx
+++ b/src/MannsBlog/Resources/Views/Root/CurriculumVitae.de-DE.resx
@@ -213,4 +213,19 @@
   <data name="viewbag-title" xml:space="preserve">
     <value>Curriculum Vitae - Sascha Manns's Twilight Zone</value>
   </data>
+  <data name="skills-title" xml:space="preserve">
+    <value>Erfahrungen</value>
+  </data>
+  <data name="jobs-title" xml:space="preserve">
+    <value>Bisherige berufliche Stationen</value>
+  </data>
+  <data name="activity-title" xml:space="preserve">
+    <value>Meine Programmieraktivitäten</value>
+  </data>
+  <data name="education-title" xml:space="preserve">
+    <value>Aus- &amp; Weiterbildung</value>
+  </data>
+  <data name="portfolio-title" xml:space="preserve">
+    <value>Mein Portfolio</value>
+  </data>
 </root>
